・スコアボードを表示（揃ったら100点加算） ・絵柄を変えても縦横比が崩れないように修正 ・透過画像の場合でも背景を白色になるよう修正

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div id="score">0</div>
     <main>
         <!-- <section class="panel">
             <img src="img/food_kakuni_manju.png">
@@ -23,7 +24,6 @@
             <div class="stop">STOP</div>
         </section> -->
     </main>
-
     <div id="spin">SPIN</div>
 
     <script src="js/main.js"></script>
